feat: add multi-tenancy simplification
