# app-resource-manager/api/nbi/v2/spec/resource/v2/app_workload_service.openapi.yaml
@@ -8,8 +8,60 @@ paths:
         - resource.v2.AppWorkloadService
       summary: ListAppWorkloads
       description: Gets a list of all workloads for an application of a deployment in a cluster.
+      operationId: resource.v2.AppWorkloadService.ListAppWorkloads2
+      parameters:
+        - name: app_id
+          in: path
+          description: Application ID
+          required: true
+          schema:
+            type: string
+            title: app_id
+            maxLength: 80
+            minLength: 1
+            pattern: ^[a-z0-9][a-z0-9-]{0,78}[a-z0-9]{0,1}$
+            description: Application ID
+        - name: cluster_id
+          in: path
+          description: Cluster ID
+          required: true
+          schema:
+            type: string
+            title: cluster_id
+            maxLength: 40
+            minLength: 1
+            pattern: ^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$
+            description: Cluster ID
+        - name: projectName
+          in: query
+          description: Project name for multi-tenant path routing.
+          schema:
+            type: string
+            title: projectName
+            description: (OPTIONAL) Project name for multi-tenant path routing.
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/resource.v2.ListAppWorkloadsResponse'
+  /v1/projects/{projectName}/resource/workloads/{app_id}/{cluster_id}:
+    get:
+      tags:
+        - resource.v2.AppWorkloadService
+      summary: ListAppWorkloads
+      description: Gets a list of all workloads for an application of a deployment in a cluster.
       operationId: resource.v2.AppWorkloadService.ListAppWorkloads
       parameters:
+        - name: projectName
+          in: path
+          description: Project name for multi-tenant path routing.
+          required: true
+          schema:
+            type: string
+            title: projectName
+            description: (OPTIONAL) Project name for multi-tenant path routing.
         - name: app_id
           in: path
           description: Application ID
@@ -337,6 +389,10 @@ components:
           minLength: 1
           pattern: ^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$
           description: Cluster ID
+        projectName:
+          type: string
+          title: projectName
+          description: (OPTIONAL) Project name for multi-tenant path routing.
       title: ListAppWorkloadsRequest
       required:
         - appId
